--- a/app/src/main/res/layout/activity_barchart.xml
+++ b/app/src/main/res/layout/activity_barchart.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="300dp"
-    android:layout_marginTop="50dp">
+    android:layout_marginTop="50dp"
+    tools:viewBindingIgnore="true">
 
     <com.github.mikephil.charting.charts.BarChart
         android:id="@+id/chart1"
