--- a/app/src/main/res/layout/activity_popwindow.xml
+++ b/app/src/main/res/layout/activity_popwindow.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.PopwindowActivity">
+    tools:context=".activity.PopwindowActivity"
+    tools:viewBindingIgnore="true">
 
     <Button
         android:id="@+id/top_left"
