--- a/app/src/main/res/layout/activity_touchable_ball.xml
+++ b/app/src/main/res/layout/activity_touchable_ball.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.TouchableBallActivity"
-    >
+    android:layout_centerHorizontal="true"
+    android:orientation="vertical"
+    tools:context=".activity.TouchableBallActivity">
+
     <com.demos.kotlin.views.DrawView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+        android:layout_height="match_parent" />
 
-</androidx.constraintlayout.ConstraintLayout>
+</LinearLayout>
