进度条修改图标。

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="colorBlueLight">#4291eb</color>
     <color name="colorBlue">#417AFF</color>
     <color name="colorBlueDark">#557CFA</color>
-    <color name="colorRedLight">#f44a4a</color>
+    <color name="colorRedLight">#E44F4F</color>
     <color name="colorRed">#D81E06</color>
     <color name="colorOrangeLight">#FBAD2C</color>
     <color name="colorOrange">#f68e3a</color>
