--- a/app/src/main/res/layout/activity_java.xml
+++ b/app/src/main/res/layout/activity_java.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".kotlinsyntax.JavaActivity">
+    tools:context=".activity.JavaActivity">
 
 
     <Button
